<resources>
    <string name="app_name">React</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup_info_text">Don\'t have an account? <u>Create one</u>.</string>
    <string name="logo">Logo</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="google_plus_login">Login with Google Plus</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_member_login_text">Already a member? Login</string>
    <string name="title_activity_main_swipe">MainSwipeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
